[devos] ROY-233: Add Linear reference fields to board tasks (#170)
